<resources>
    <string name="app_name">Code Kriegers</string>
    <string name="main">Play</string>
    <string name="attempts">Incorrect Username or Password!</string>
    <string name="welcome1">Welcome to\nCode Kreigers!</string>
    <string name="welcome2">Enter your\nnames below</string>
    <string name="teamMemberName1">Team Member 1</string>
    <string name="teamMemberName2">Team Member 2</string>
    <string name="submit">Submit</string>
    <string name="slide1">
        The questions are in the form of code snippets of C language.
        Each code snippet will give you instructions that will help you in
        traversing the path that leads you from one checkpoint to another.
    </string>
    <string name="slide2">
        When you reach the checkpoint[HOPEFULLY:)] you will see a QR CODE,
        click on the submit button at the end of question that
        will take you to a screen where you have to scan the QR CODE.
    </string>
    <string name="slide3">
        If the checkpoint is correct the QR CODE will be scanned successfully
        and you will next see a dialog box where you have to answer the question asked at the end of code.
    </string>
    <string name="instruct_button">Close</string>
    <string name="menu_home">Home</string>
    <string name="menu_play">Play</string>
    <string name="menu_instructions">Instructions</string>
    <string name="menu_team">Team Vision</string>
    <string name="menu_checkpoint">Checkpoints</string>
    <string name="menu_devs">Developers</string>
    <string name="menu_feedback">Feedback</string>
    <string name="final_year">1.Siddhi Jain\n2.Nayan Singhai\n3.Ishan Diwedi</string>
    <string name="pre_final_year">1.Vipul Sharma\n2.Arun Vishwakarma\n3.Drishti Beohar\n4.Ayesha Rashid\n5.Mayank Patel\n6.Ammar Alavi</string>
    <string name="second_year">1.Abhishek Tiwari\n2.Aditya Bhandari\n3.Guru Vishnu\n5.Jonathan Dabreo\n.6.Karandeep Singh\n7.Kunal Juneja\n8.Neha Parmar\n9.Nikita Chauhan\n10.Prakriti Shrivastava\n11.Rishika Patel\n12.Sapna Yadav\n13.Shubham Sharma\n14.Tushar Amrit\n15.Har
shvardhan Kaushik\n16.Pushpak Manwani
</string>
    <string name="checkpoint1">Rolta</string>
    <string name="checkpoint2">Nescafe(SAC)</string>
    <string name="checkpoint3">Chemistry Lab</string>
    <string name="checkpoint4">G9</string>
    <string name="checkpoint5">EEOAT</string>
    <string name="checkpoint6">Mario</string>
    <string name="checkpoint7">G6</string>
    <string name="checkpoint8">NTB</string>
    <string name="checkpoint9">Amul</string>
    <string name="checkpoint10">Train</string>
    <string name="checkpoint11">ED Hall</string>
    <string name="checkpoint12">Archi. Department</string>
    <string name="checkpoint13">Mech. Department</string>
    <string name="checkpoint14">SBI ATM</string>
    <string name="checkpoint15">Director\'s Office</string>
    <string name="path1_question1">
        string s="dragon”; \n
int q=0; \n
if(found(s)) \n
{ \n
q=count (number of prime numbers visible); \n
turn.anticlockwise((q+3)*30))° ; \n
} \n
if(found narrow path) \n             //walking to the narrow path by the side of atm\n
	printf(“You have reached the next level”); \n
else continue walking forward; \n
x=3 ups \n
while(! climbed x) \n
	walk straight \n
int a=b=c=0; \n
while(found(“Carrier”)) \n
{ a++; \n
} \n
If(find(well)==true) \n
{   \n
if(check(isWaterPresent())) \n
{ \n
count(number of windows open); \n
} \n
else \n
{ \n
moveToCentreStage(); \n
takeSelfieWith(“Clark Joseph Kent”); \n
} \n
while(found(“Men In Black”)) \n
{  \n
b++; \n
} \n
} \n
String g=”Mai nikla _______ leke”; \n
findGraffiti(g); \n
while(found(“Iconic Bollywood Dialogues”))  \n
{  \n
c++; \n
} \n
Move out of the gate next to it \n

w=mera joota hai japaani \n
while(! found(Hindustani)) \n
	find(Hindustani) \n
x=Mario \n
Search_for(x) \n
While(!found(x’s love)) \n
	Walk \n
Take selfie with her \n
Enter(a+b+c) \n //in app

    </string>
    <string name="path2_question1">
        if( ! Facing MANIT\’s SBI BANK)\n  Reposition yourself and face its front door; \n
if (Facing MANIT\’s SBI  BANK Door)\n
Take a right turn ;\n
Look around till Banyan tree in sight; \n
while(! Reached a big banyan tree with indian flag colors)\n
Continue walking; \n
 \n
If ( Facing banyan tree) \n
hurdlecount = Number of vehicle hurdles right behind the tree;\n
\nTurn left; \n
 x=firedragondartboard(hurdlecount)+3;\n
  numg= total number of \‘G\’ \’s in the dragonfire dartboard; \n

If ( facing firedragondartboard)\n
   Turn 180 degrees to the left;\n
 \n
guess1= “Dekho ek dakiya aaya, thaila ek haath mai laya, pehne hai wo khakhi kapde, chitthi \nkai hath mai pakde. (where is “chitthi” posted ?)”; \n

While ( ! guess1 found)\n
  Walk straight and look around; \n

If ( guess1 found)  Search ( 24 hour clock time on guess 1) // A time in 24 hour format.\n   storetime1=24 hour clock time on guess 1; \n
  storetime=int(storetime1);   \n
findme=(((storetime/4)*10)+5)*2;  \n
   If ( facing guess1)  Turn (findme) degrees right; \n
While ( ! first AC is encountered) {\n
 Windowcount= Number of windows on the left ;  \n
Keep \n
walking straight;\n
 } \n


If ( First AC is Encountered ) \n
 acencounternumber= A Number on AC of format “ A.BC”;  \n
finalac= int(acencounternumber);   \n

If ( facing AC )  Turn (2*findme) degrees to the right and walk straight  Search ( minions on \nwall )  minionnumber= Number of minions on wall; \n

If ( Facing minions on wall)  \n
Turn ((((int(acencounternumber)*2)*minionnumber)+10) degrees left;\n

 Search ( A QR code around an electronic banking outlet )  // Hint : gyrate around that \nestablishment. \n

Q: Enter the Value of ( x - finalac) .\n

    </string>
    <string name="path3_question1">
        if(!Facing Banyan Tree)\n
Face_Banyan_Tree_Such_That_Nescafe_is_on_your_right_side;\n
Else\n
Find_a_Dancing_girl_who_will_show_you_path;\n

intcount_of_trees=0;\n
while(count_of_trees!=square_of(even_prime_number))\n
{\n
if(tree_on_right_side)\n
count_of_trees++;\n
}\n
\n
what_to_do=TURN_LEFT;\n
\n
start_pos=current_pos;	//pos is position\n
\n
while(!(NESnessenCAcacaFE))\n
walk++;\n
\n
if(hungry)\n
eat_something;\n
else\n
  {\n
make_your_displacement=0;\n
  }\n
\n
str="21 SAVAGE";\n
find(str)\n
\n
if(str_is_found){\n
	you_know_where_to_go;\n
        cross_the_gate;\n
        if(gate == closed)\n
        search(alternate_path)\n
        //Alternate path: Admin -> path_btw_Maulana_Azad_and_anti-ragging_board -> left_from_department_of_electrical_eng_board\n\n
        //Walk striaght_until_bridge_on_left &amp;&amp; plantation_on_right\n
        //Take_left_and_find_the_gate_you_were_supposed_to_find\n
        }\n\n
else\n
	find(str) and repeat;\n

count=number_of_celebrities_on_wallon left;\n

if(count)\n
{\n
	move_straight_your_train_is_about_to_leave;\n
}\n
Question:What is the value of count?\n

    </string>
    <string name="path1_question2">
        \tWalk opposite to Human Evolution \n
\tint count=2; \n
for(i=Ironman;i &lt; Shaktimaan ;i++) \n
{ \n
if(i!=avenger) \n
count++; \n
} \n
Goto: “The Taste of India” \n
Enter(count)\n //in app

    </string>
    <string name="path2_question2">
         If ( Facing QR Code )   \n
While ( ! robot spotted)    \n
Turn 90 degrees to right and search for a big robot    \n
If ( robot spotted)   \n
 robot_player_distance = Your Distance till robot;  \n
 While (  ! (robot_player_distance) / 2 )     Keep walking; \n

If ( you dare )  Jump through the fence twice and enter the building nearby; \n
Else   Find an appropriate way to enter the building; \n

If ( in Building)  extingush_count=0; \n
  Search ( TV on wall ) \n
  If ( Facing tv )    Turn left;    \n
While ( ! 69 found behind an extinguisher) // a sole number 69 which is circled and written in\n black        {\n
Walk straight and inspect every extinguisher which appears on the left in path thoroughly; \n
        extguish_count++\n
} \n

If ( 69 found on extinguisher) \n
 while (  ! you reach ((extguish_count+ 2)th extinguisher)  )  \n
  Keep walking; \n

If ( Facing ((extgush_count+ 2)th extinguisher ) ) \n
 Turn 180 degrees to the right;  \n
 Search ( stairs) \n
   Go upstairs;\n

Turn left; \n
upfloorextingush_count= Count of extinguisher on left side ( of upper floor ); \n
While ( !uprfloorextinguish_count=4)  { \n
Walk straight \n
} \n
Search ( for the best and most elegant office at NIT Bhopal) // (The controller of MANIT) \n

exponentialminions= minionnumber*minionnumber; \n

Scan the QR CODE  \n

Q: Enter the value of exponentialminions;

    </string>
    <string name="path3_question2">
        Find antenna;\n
Move in the direction antenna is showing;\n
Search for  an inverted bowl;\n
int r;\n
if(Found)\n
{\n
Stand in such a way that the bowl is at your back;\n
if(done){\n
turn 180°;\n
calculate  r as Radius of first inverted bowl you encountered;\n
}\n
}\n
String s; // whenever buying a ticket ,you go to…s..\n
int c;\n
while(earth==inclined){\n
goto s;\n
c=No of Number of Silver coloured vertical Bars on both side of the inclined plane;\n
}\n
int d=sqrt((c/2)-1)*3;\n
if(! Facing \'d\'th Fibonacci number counter)\n
{\n
face(\'d\'th Fibonacci  number counter+ 7);\n
}\n
else if(Facing \'d\'th Fibonacci number counter)\n
{\n
Turn 90 ° in a anticlockwise direction ;\n
}\n
\n
Go straight till you hit a wall with AC; \n
Again turn left; \n
int steps=0; \n
while(!encountered rooms on left side &amp;&amp; steps &lt;90) {\n
steps++;    \n
}\n
Turn left;\n
Move; \n
Search for a person lost in his art with red feet;\n
\n
int f;\n
if( Found)\n
{\n
Move straight;\n
if(Disc like Floral print seen){\n
stop;\n
 f= Count Number of disc like_Flowers on it ;\n
}\n
}\n
string q;//q is the word which fills the following sentence:- Harry Potter can speak__ ‘s tongue.\n
Move to q;\n
Since you must be tired by now. So go to a museum to have some peace.\n
if(reached){\n
Turn Right side;\n
If(Want to cross this path?){\n
Find bridge;\n\n
Hint:A structure carrying a road , path ,railway ,etc. across a river , road or any other obstacle like codekriegers.\n
}\n
Move on a path which have a plantation dated 06-JAN-2018 till you get the other end; \n
if(date foundand facing the date)\n
{\n
Turn right;\n
}\n
if(Done)\n
{\n
Move forward ;\n
}\n
goto Library;\n
turn 180°;\n
walk straight;\n
stop when G4 encountered on left ;\n
If (facing G4) \n
Turn 180°;\n
Find Rajinikanth;\n
Search in google for the latest movie of Rajinikanth;\n
if(Rajanikanth Found or Joker Found )\n
{\n
Clap twice;\n
Goto its backside;\n
}\n
else {\n
search for a train;\n
Go to its backside; \n
 }\n\n
Question :What is the value of c?\n

    </string>
    <string name="path1_question3">
        until(hungry) \n
	have refreshments \n
int x=prev_ans++; \n
open(compass); \n
move(Southwards,(x0)metres); \n
take(left) ; \n
int k=0; \n
do{
	if(found(lamp-post)) \n
{ \n
k++; \n
} \n
}while(!lamp-post on right) \n
Enter(k)\n  //in app

    </string>
    <string name="path2_question3">
        Count =0;\n
 If (you are under cctv surveillance ) { \n
Find(stairs to ground) Run(2*speed); \n
Count+=(step to ground) ;\n
 }\n
 A=Google( i have 2 hands on my face, you check me to keep your pace) Find (A) ; \n
B=establishment of A; //years\n
 While (! Portrait of a legend) Search(in all directions) ; \n
Follow( "his vision") ; \n
If (fence &amp;&amp; flag post) V=Find( robot) ; // search in all directions \n
Reach (V) ;\n
 If (facing V) Turn ("330 right");\n
 Follow("trail of flowers") ;\n
 Int n; \n
n=B%10;\n
 Switch(switch spotted on right) { \n
Case bulb graffiti : Int K+=no of empty graffiti circles //13 \n
Break;\n
 Case two wheelers: Count+=no of wheels;\n
 Break;\n
 } \n
S= "it all starts with a coffee" ;\n
 Goto (S) ; \n
Int d=k +n; \n
        \n

Enter d \n

    </string>
</resources>