<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_play_circle_filled_black_24dp"
            android:title="@string/menu_play" />
        <item
            android:id="@+id/nav_instructions"
            android:icon="@drawable/ic_instructions"
            android:title="@string/menu_instructions" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_team" />

        <item
            android:id="@+id/nav_checkpoints"
            android:icon="@drawable/ic_checkpoints"
            android:title="@string/menu_checkpoint" />

    </group>


    <group android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_devs"
            android:icon="@drawable/ic_developer_mode_black_24dp"
            android:title="@string/menu_devs" />
    </group>



    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/facebook"
                android:icon="@drawable/ic_icons8_facebook"
                android:title="Vision"/>

            <item android:id="@+id/ckFacebook"
                android:icon="@drawable/ic_icons8_facebook"
                android:title="Code Kriegers"/>

            <item android:id="@+id/website"
                android:icon="@drawable/ic_web"
                android:title="Website"/>

            <item android:id="@+id/Email"
                android:icon="@drawable/ic_mail_black_24dp"
                android:title="Email"/>

        </menu>
    </item>

</menu>
